tests/compile-fail/Rule_20_2.rs
include!("../../include/_'_.rs");
//~ ERROR invalid character `'` in crate name: `Rule_20_2_'`

fn main() {}
